# PlayerSDK

./: .gitignore  README.md  build.gradle  gradle.properties  parse_asan_crash.py  parse_crash.py  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jeffmony/playerdemo/: CustomGLViewActivity.java  MainActivity.java  MyApplication.java  MyGLPlayerActivity.java  PlayerActivity.java  SurfaceViewActivity.java  TextureViewActivity.java  VideoRenderActivity.java
app/src/main/java/com/jeffmony/playersdk/: MainActivity.java
app/src/main/res/layout/: activity_custom_glview.xml  activity_glplayer.xml  activity_main.xml  activity_player.xml  activity_surface_view.xml  activity_texture_view.xml  activity_video_render.xml
app/src/main/res/values/: colors.xml  speed_spinner.xml  strings.xml  volume_spinner.xml
exoplayer/: build.gradle
exoplayer/src/main/: AndroidManifest.xml
exoplayer/src/main/java/com/google/android/exoplayer2/: PlaybackParameters.java  SimpleExoPlayer.java
exoplayer/src/main/java/com/google/android/exoplayer2/audio/: DefaultAudioSink.java  Sonic.java  SonicAudioProcessor.java
exoplayer/src/main/java/com/google/android/exoplayer2/ext/okhttp/: OkHttpDataSource.java  OkHttpDataSourceFactory.java
exoplayer/src/main/java/com/google/android/exoplayer2/extractor/ts/: TsExtractor.java
extra/ffmpeg/arm64-v8a/: config.asm
extra/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswscale.pc
extra/ffmpeg/arm64-v8a/shared/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libswscale.pc
extra/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc
extra/ffmpeg/armeabi-v7a/shared/include/libavutil/: ffversion.h
extra/ffmpeg/armeabi-v7a/shared/include/libffmpeg/: config.h
extra/ffmpeg/armeabi-v7a/shared/lib/pkgconfig/: libavfilter.pc  libavformat.pc  libswresample.pc
extra/ijkmedia/ijkplayer/android/: ijkplayer_jni.c  ijkplayer_jni.h
extra/ijkmedia/ijksdl/android/: ijksdl_android_jni.c  ijksdl_android_jni.h
extra/ijkmedia/ijksoundtouch/: Android.mk  ijksoundtouch_log.h  ijksoundtouch_wrap.cpp  ijksoundtouch_wrap.h
extra/ijkmedia/ijksoundtouch/source/: Makefile.am
extra/ijkmedia/ijksoundtouch/source/Android-lib/: README-SoundTouch-Android.html
extra/ijkmedia/ijksoundtouch/source/Android-lib/jni/: Android.mk
extra/ijkmedia/ijksoundtouch/source/Android-lib/src/net/surina/soundtouch/: SoundTouch.java
extra/ijkmedia/ijksoundtouch/source/SoundStretch/: Makefile.am  RunParameters.cpp  WavFile.cpp  WavFile.h
extra/ijkmedia/ijksoundtouch/source/SoundTouch/: FIRFilter.cpp  Makefile.am  RateTransposer.cpp
extra/ijkmedia/ijksoundtouch/source/SoundTouchDLL/: SoundTouchDLL.cpp  SoundTouchDLL.sln
files/: exoplayer_volume_feature.txt
gltoolkit/: build.gradle
gltoolkit/src/main/: AndroidManifest.xml
gltoolkit/src/main/java/com/jeffmony/gltoolkit/: Constants.java  ShaderHelper.java  ShaderProgram.java  TextResourceReader.java  VertexArray.java  VideoRenderEngine.java  VideoShaderProgram.java
gltoolkit/src/main/res/raw/: default_fragment_shader.glsl  default_vertex_shader.glsl
gradle/wrapper/: gradle-wrapper.properties
ijkplayer/: CMakeLists.txt  build.gradle
ijkplayer/asan/: copy_asan.sh  delete_asan.sh
ijkplayer/asan/resources/lib/arm64-v8a/: wrap.sh
ijkplayer/src/main/: AndroidManifest.xml
ijkplayer/src/main/cpp/: CMakeLists.txt  jeffmony.cpp
ijkplayer/src/main/cpp/include/libavutil/: ffversion.h
ijkplayer/src/main/java/com/jeffmony/video/process/: FFmpegRemux.java
ijkplayer/src/main/java/tv/danmaku/ijk/media/player/: IjkMediaPlayer.java
media_cache/: CMakeLists.txt  build.gradle
media_cache/source/: .gitignore  compile-libevent.sh  compile-openssl.sh  init-libevent.sh  init-openssl.sh
media_cache/source/output/openssl/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
media_cache/src/main/cpp/: android_log.h  common.h  local_proxy_server.cc  local_proxy_server.h  log.h  media_env.c  media_env.h  media_jni.cc  mediacache_jni.cc  proxy_cache_manager.cc  proxy_cache_manager.h  request_info.h  request_parser.cc  request_parser.h
media_cache/src/main/java/com/jeffmony/mediacache/: CacheCleanStrategy.java  CacheSdk.java  IConnection.java  ProxyCacheManager.java  ProxyConfig.java  ProxyManager.java  URLConnection.java
media_cache/src/main/java/com/jeffmony/mediacache/listener/: CacheListener.java
playersdk/: build.gradle
playersdk/src/main/: AndroidManifest.xml
playersdk/src/main/java/com/jeffmony/playersdk/: CommonPlayer.java  IPlayer.java  LogUtils.java  LogUtis.java  PlayerParams.java  PlayerType.java  WeakHandler.java
playersdk/src/main/java/com/jeffmony/playersdk/callback/: IVideoInfoCallback.java
playersdk/src/main/java/com/jeffmony/playersdk/component/: HttpClientManager.java
playersdk/src/main/java/com/jeffmony/playersdk/glplayer/: GLPlayer.java
playersdk/src/main/java/com/jeffmony/playersdk/glview/: BitmapOverlayVideoProcessor.java  VideoProcessingGLSurfaceView.java
playersdk/src/main/java/com/jeffmony/playersdk/impl/: ExoPlayerImpl.java  IjkPlayerImpl.java  PlayerImpl.java
playersdk/src/main/java/com/jeffmony/playersdk/manager/: IPlayerInstanceListener.java  PlayerConfig.java  PlayerInvokeInfo.java  PlayerManager.java
playersdk/src/main/java/com/jeffmony/playersdk/net/: HttpEventListener.java
playersdk/src/main/java/com/jeffmony/playersdk/render/: BaseVideoRenderer.java  DefaultVideoRenderer.java  SplitSquareVideoRenderer.java  SplitVideoRenderer.java
playersdk/src/main/java/com/jeffmony/playersdk/thread/: WorkerThreadManager.java
playersdk/src/main/java/com/jeffmony/playersdk/utils/: HttpUtils.java  ScreenUtils.java  Utility.java
playersdk/src/main/java/com/jeffmony/playersdk/videoinfo/: M3U8.java  M3U8Constants.java  M3U8Seg.java  VideoInfoParserManager.java  VideoType.java
playersdk/src/main/java/com/jeffmony/playersdk/view/: VideoGLSurfaceView.java
xcrash/: build.gradle  consumer-rules.pro  proguard-rules.pro
